src/objects/peer__Login__c.object
<CustomObject>
    <description>stores login platform token per device</description>
    <fields>
        <fullName>peer__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Login</relationshipLabel>
        <relationshipName>Login_Account</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>peer__Auth_Token__c</fullName>
        <description>Authentication of the logged in user per device</description>
        <label>Auth Token</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>peer__Device_Name__c</fullName>
        <description>Device Name from which the user logged in</description>
        <label>Device Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Login_Time__c</fullName>
        <description>The login time when the user logged in</description>
        <label>Login Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Login</label>
    <nameField>
        <label>Login Info</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Login</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>